some more progress

--- a/ipl.ipynb
+++ b/ipl.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ct/586vcml54jgf9dlg8gh73lq40000gn/T/ipykernel_8775/2274191625.py:1: DeprecationWarning: `import pandas_profiling` is going to be deprecated by April 1st. Please use `import ydata_profiling` instead.\n",
+      "/var/folders/ct/586vcml54jgf9dlg8gh73lq40000gn/T/ipykernel_86570/2274191625.py:1: DeprecationWarning: `import pandas_profiling` is going to be deprecated by April 1st. Please use `import ydata_profiling` instead.\n",
       "  from pandas_profiling import ProfileReport\n"
      ]
     }
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ab10d34af7a4094acc119db9c654fde",
+       "model_id": "ac33e3d165c1483bb5ad053c8744fa3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +99,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d233a5747144d4c90eae82b9551444b",
+       "model_id": "8d94c790c4f7426b97af03c7a8021341",
        "version_major": 2,
        "version_minor": 0
       },
@@ -113,7 +113,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b545337d06cc43de91e1297abb660371",
+       "model_id": "3d5d2b89b4d240658f8568cb01e50d5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90ed34724b484d1b93df656c6655503c",
+       "model_id": "247ab3517cab44e8bf66437154838006",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,7 +140,7 @@
     }
    ],
    "source": [
-    "ProfileReport(matches, title='IPL Matches Report', explorative=True).to_file(\"matches_report.html\")\n"
+    "ProfileReport(matches, title='IPL Matches Report', explorative=True).to_file(\"matches_report.html\")"
    ]
   },
   {
@@ -1135,7 +1135,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>match_type</th>\n",
+       "      <th>venue</th>\n",
+       "      <th>team1</th>\n",
+       "      <th>team2</th>\n",
+       "      <th>toss_winner</th>\n",
+       "      <th>toss_decision</th>\n",
+       "      <th>winner</th>\n",
+       "      <th>result</th>\n",
+       "      <th>result_margin</th>\n",
+       "      <th>target_runs</th>\n",
+       "      <th>target_overs</th>\n",
+       "      <th>umpire1</th>\n",
+       "      <th>umpire2</th>\n",
+       "      <th>batting_avg</th>\n",
+       "      <th>runs</th>\n",
+       "      <th>bowling_avg</th>\n",
+       "      <th>wickets</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>League</td>\n",
+       "      <td>M Chinnaswamy Stadium</td>\n",
+       "      <td>Royal Challengers Bangalore</td>\n",
+       "      <td>Kolkata Knight Riders</td>\n",
+       "      <td>Royal Challengers Bangalore</td>\n",
+       "      <td>field</td>\n",
+       "      <td>Kolkata Knight Riders</td>\n",
+       "      <td>runs</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>223.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Asad Rauf</td>\n",
+       "      <td>RE Koertzen</td>\n",
+       "      <td>26.44</td>\n",
+       "      <td>2882.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>League</td>\n",
+       "      <td>Punjab Cricket Association Stadium, Mohali</td>\n",
+       "      <td>Kings XI Punjab</td>\n",
+       "      <td>Chennai Super Kings</td>\n",
+       "      <td>Chennai Super Kings</td>\n",
+       "      <td>bat</td>\n",
+       "      <td>Chennai Super Kings</td>\n",
+       "      <td>runs</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>241.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>MR Benson</td>\n",
+       "      <td>SL Shastri</td>\n",
+       "      <td>34.09</td>\n",
+       "      <td>1977.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  match_type                                       venue  \\\n",
+       "0     League                       M Chinnaswamy Stadium   \n",
+       "1     League  Punjab Cricket Association Stadium, Mohali   \n",
+       "\n",
+       "                         team1                  team2  \\\n",
+       "0  Royal Challengers Bangalore  Kolkata Knight Riders   \n",
+       "1              Kings XI Punjab    Chennai Super Kings   \n",
+       "\n",
+       "                   toss_winner toss_decision                 winner result  \\\n",
+       "0  Royal Challengers Bangalore         field  Kolkata Knight Riders   runs   \n",
+       "1          Chennai Super Kings           bat    Chennai Super Kings   runs   \n",
+       "\n",
+       "   result_margin  target_runs  target_overs    umpire1      umpire2  \\\n",
+       "0          140.0        223.0          20.0  Asad Rauf  RE Koertzen   \n",
+       "1           33.0        241.0          20.0  MR Benson   SL Shastri   \n",
+       "\n",
+       "   batting_avg    runs  bowling_avg  wickets  \n",
+       "0        26.44  2882.0          0.0      0.0  \n",
+       "1        34.09  1977.0          0.0      0.0  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches['batting_avg'].fillna(0,inplace=True)\n",
+    "matches['bowling_avg'].fillna(0,inplace=True)\n",
+    "matches['runs'].fillna(0,inplace=True)\n",
+    "matches['wickets'].fillna(0,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1963,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
